# temp-email-telebot

./: .gitignore  README.md  build.sh  setup.cfg  setup.sh
src/: app.py  config.py  email_creator.py
src/files/: welcome_message.txt
