[metadata]
name = Temp_email_telebot
version = 0.0.1
description = Telegram bot for interaction with temp mail service
author = August

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyTelegramBotAPI==4.8.0
    python-dotenv==0.21.0
    flake8==6.0.0
    requests==2.28.1

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts = 
    bot-start = src.app:main
